app/assets/stylesheets/posts.css.scss
@import 'bourbon';
@import 'colors';

/* -- index -- */

.posts { 
  padding: 30px; 
  text-align: center;
}

.normal {
  max-width: calc(33.3% - 2em);
  @include flex-basis(calc(25% - 2em));
}

.popular {
  border-top: 6px solid $red; 
  max-width: calc(67% - 2em);
  @include flex-basis(calc(50% - 2em));
}

.post.popular:hover {
  background: rgba(218, 76, 67, 0.1);
}

.post {
  position: relative;
  overflow: hidden;
  padding: 15px;
  display: block;
  border-radius: 3px;
  background: $offWhite;
  box-shadow: 0 2px 4px rgba(0, 0, 0, .15); 
  margin: 0 1em 1.5em 1em;
  @include flex-grow(1);
  @include transition(background .3s ease);
}

.post:hover {
  /*background: $white;*/
  background: rgba(94, 165, 216, 0.1);
}

.post .meta {
  background: rgba(94, 165, 216, 0.7);
  height: 50px;
  color: $white;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 15px;
  @include transform(translate3d(0, 50px, 0));
  @include transition(transform .3s ease);
}

.popular.post .meta { background: rgba(218, 76, 67, 0.7); }

.post:hover .meta {
  @include transform(translate3d(0, 0, 0));
}

.row {
  width: 100%;
  @include display(flex);
}

.post-image {
  max-height: 100px;
  overflow: hidden;
}

.post h3 { 
  margin-bottom: 15px; 
  display: inline-block;
}

.post-data i {
  font-size: .6em;
  border-radius: 5px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
  padding: 2px 5px;
  margin-left: 5px;
  background: $white;
  color: $red;
}

.post-data i:last-of-type { margin-left: 0; }

/* -- show -- */

article { 
  @include flex(1);
  @include display(flex);
  @include flex-direction(column);
}

article a:hover { text-decoration: none; }

article a:hover span { 
  color: $blue; 
}

article section { @include display(flex); }

.post-meta section, .extra section { 
  margin: 0 7.5px;
  @include align-items(center); 
}

.post-meta, .extra, .content { 
  margin: 30px 0; 
  @include justify-content(center);
}

.post-meta i { margin-right: 5px; }

article .tools a { margin: 0 7.5px; }

/* -- form -- */

.post-form { padding-bottom: 60px; }

.old-image p { width: 25%; }

